--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-icons": "^4.3.1",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-validation": "^3.0.7",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "validator": "^13.7.0",
