--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "flag-icon-css": "^3.5.0",
+    "flag-icons": "^6.2.0",
     "i18next": "^21.6.12",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
     "js-cookie": "^2.2.1",
-    "moment": "^2.29.2",
+    "moment": "^2.29.2", 
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-icons": "^4.3.1",
